fix: page jump by width

--- a/client_V2/src/scss/app.scss
+++ b/client_V2/src/scss/app.scss
@@ -9,8 +9,8 @@
 
 
 #root {
-  
-  height: 100%;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 .wrapper {
